Changelog
------------

3.0.5
 # Fixed bug in widgetkit layouts

3.0.4
 # Fixed ZL Field bug on new App Instance creation
 # Fixed FilesPro source files bug

3.0.3
 # Fixed Plupload issue with Bootstrap & Joomla 3
 # Fixed ZL Field Actions on Submission Assignment
 # ZL Field layout.json Default value fixed & code cleaned
 # ZL Field application.json Default App fixed
 ^ ZL Field Password field value is now encrypted
 ^ Files Pro uploaded files names are now transliterated

3.0.2
 ^ ZL Field improvements

3.0.1
 ^ ZL Field minor bugs fixed
 ^ Joomla 3 JModel compatibility

3.0
 ^ ZOO & Joomla 3 compatibility
 ^ ZL Field improvements
 + Improved backend and frontend perfomance
 + Element Params Ajax interface
 - Removed j1.5 compatibility

2.6.6
 + Temporal Bootstrap Library
 ^ SEF functions improvements

2.6.5
 ^ ZL Field new features and improvements
 # Fixed warning if FilesPro Elements default file were missing
 ^ Files Pro Default File change to Default Source, allowing folders

2.6.4
 # ZL Field Config fix on Submissions

2.6.3
 # Model offset/startlimit fix for ZOOfilter issue pagination and others 

2.6.2
 + Repeatable Elements Instance limit option
 # Static Content Access field recovered

2.6.1
 # Widgetkit Layouts Separate By feature fixed

2.6
 # Static Content qTip layout recovered

2.5.12
 # Static Content element name fix

2.5.11
 + Element Separator custom By option
 ^ jquery.tinymce.js updated
 # Submission spotlight show/hide button fixed

2.5.10
 ^ Separator By will no longer bi filtered
 # Type Editing bug because of missing qTip field

2.5.9
 ^ WidgetKit 1.1 Slideshow layout adaption

2.5.8
 # WidgetKit Lightbox Params load fixed
 + Model Helper
 ^ Dependency Helper improved
 ^ ZL Params improved, renamed to ZLField

2.5.7
 # Fixed Edit Type issue

2.5.6
 + Files Pro: new path variables
 + ZL Params: State Feature
 ^ ZL Params: perfomance improved
 + ZL Params: Select Extend feature
 + Added None option to Separator Field